objects/hey__Logger__mdt.object
<CustomObject>
    <fields>
        <fullName>hey__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hey__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hey__Type__c</fullName>
        <description>Logger Implementation Type of ILogger interface</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Logger</label>
    <pluralLabel>Loggers</pluralLabel>
</CustomObject>